2007-02-07  Soren Sandmann <sandmann@daimi.au.dk>

	* tests/sequence-test.c (compare_items): Force an arbitrary order
	on otherwise identical items. 

	* glib/gsequence.c: Add comment discussing splay trees vs. other trees. 
	* glib/gsequence.c (is_end): Add fast path for the common case
	when the node is not actually the end node.

2007-02-05  Soren Sandmann <sandmann@daimi.au.dk>

	* glib/gsequence.c (g_sequence_sort_iter): Don't prohibit access
	until after the g_sequence_move_range() call.  Bug 404759,
	Christian Persch.

       * tests/sequence-test.c: Formatting fix.

2007-02-03  Soren Sandmann <sandmann@daimi.au.dk>

	* glib/gsequence.c (struct _GSequence): Add a new 'real_sequence'
	field.
	(g_sequence_new): Initialize real_sequence to the sequence
	(g_sequence_sort_iter): Set real_sequence of the temporary
	sequence to the real sequence.
	(g_sequence_sort_changed_iter): Same
	(g_sequence_insert_sorted_iter): Same
	(g_sequence_search_iter): Same
	(g_sequence_iter_get_sequence): Return real_sequence

	* tests/sequence-test.c (compare_iters): Insert assertions that
	the iters point to the sequence being manipulated.

2007-02-03  Soren Sandmann <sandmann@daimi.au.dk>

	* glib/gsequence.[ch]: New files implementing GSequence, a list
	implemented using a binary tree.
	* glib/glib.h, glib/glib.symbols: Update for GSequence.
	* docs/reference: Add documentation for GSequence
	* tests: Add sequence-test.c, a thorough test of all of 
	the GSequence API.

2007-01-30  Matthias Clasen <mclasen@redhat.com>

	* glib/glib.symbols:
	* glib/gslice.h:
	* glib/gslice.c: Don't make ABI depend on G_ENABLE_DEBUG,
	just add an empty g_slice_debug_tree_statistics () implementation
	in the !G_ENABLE_DEBUG case.

2007-01-26  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Define G_GNUC_INTERNAL for Sun Studio
	as __hidden.  (#342981, Brian Cameron)

	* glib/gconvert.c:
	* glib/gutf8.c: Move G_GNUC_INTERNAL uses to the right
	spot.  
