@@ -1,3 +1,12 @@
+Fri Feb  9 17:46:18 2007  Søren Sandmann  <sandmann@redhat.com>
+
+	* glib/gsequence.c (g_sequence_get_end_iter): Remove assertion.
+	* glib/gsequence.c (is_end): Return TRUE if the iter doesn't have
+	a parent.
+	* glib/gsequence.c: Fix grammar of comment. 
+	* glib/gsequence.c (node_update_fields): Use a temporary variable
+	for the n_nodes.
+
 2007-02-07  Soren Sandmann <sandmann@daimi.au.dk>
 
 	* tests/sequence-test.c (compare_items): Force an arbitrary order
